[gd_scene load_steps=4 format=3 uid="uid://btr2ceiwejhy8"]

[ext_resource type="Script" uid="uid://bmb64dxc0hvss" path="res://scripts/KeyItem.gd" id="1_1bx6h"]
[ext_resource type="Texture2D" uid="uid://rodaai7gvja5" path="res://images/skull.png" id="2_sco77"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pa1hf"]

[node name="KeyItem" type="Area2D"]
script = ExtResource("1_1bx6h")
item_name = "skull"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(-10.3362, 10.8954)
shape = SubResource("CircleShape2D_pa1hf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_sco77")

[node name="PromptLabel" type="Label" parent="."]
offset_left = -216.0
offset_top = -271.0
offset_right = -84.0
offset_bottom = -248.0
scale = Vector2(3.52195, 3.38008)
text = "Press E to Collect"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
